--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -7,3 +7,11 @@
   align-items: center;
 }
 
+
+
+.welcome {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-top: 28px;
+  color: #333;
+}
